--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,1 +1,77 @@
-site_name: My Docs
+site_name: Создание технической документации в рамках подхода docs-as-code # Название сайта
+site_description: Инструкция пользователя по работе с технической документацией в рамках подхода docs-as-code # Описание сайта, надо для meta-тегов
+site_url: https://G-o-T.github.io/docs-as-code_manual # URL сайта
+copyright: © Created by Volya Gotovtseva # copyright
+nav:
+  - index.md
+  # - introduction.md
+  # - 2. Инструменты для реализации подхода docs-as-code:
+  #   - tools/markup.md
+  #   - tools/git.md
+  #   - tools/editor.md
+  #   - tools/ssg.md
+  # - 3. Алгоритм создания технической документации в рамках подхода docs-as-code:
+  #     - logic/environment.md
+  #   - 3.2. Работа с репозиторием:
+  #     - logic/repository/create.md
+  #     - logic/repository/copy.md
+  #   - logic/project.md
+  #   - logic/deploy.md
+  #   - logic/config.md
+  #   - logic/content.md
+theme: # Тема сайта и ее параметры
+    name: material # Название темы
+    logo: logo.png # Ссылка на логотип сайта
+    language: ru # Язык
+    font:
+      text: Inter # Шрифт текста
+      code: Roboto Mono # Шрифт для текста кода
+    palette: # Настройки светлой и тёмной тем
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
+      toggle:
+        icon: material/brightness-4
+        name: Темное оформление
+      primary: amber
+      accent: cyan
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      toggle:
+        icon: material/brightness-7
+        name: Светлое оформление
+      primary: amber
+      accent: cyan 
+    features:
+      - navigation.indexes # Необходимо для создания корневых страниц разделов меню
+      - navigation.top # Кнопка для быстрой обратной прокрутки страницы
+      - search.suggest # Подсказки при вводе поискового запроса
+      - search.highlight # Подсветка результатов поиска на странице
+      - content.code.copy # Кнопка копирования в блоке кода
+# extra_css:
+#     - extra-styles.css
+extra:
+    generator: false
+    social:
+    - icon: fontawesome/brands/linkedin
+      link: https://www.linkedin.com/in/gotovtseva/
+      name: LinkedIn 
+    - icon: fontawesome/brands/github
+      link: https://github.com/G-o-T
+      name: GitHub
+markdown_extensions: # Расширения markdown
+  - def_list # Поддержка списков определений
+  - pymdownx.tabbed # Поддержка табов
+  - pymdownx.details # Поддержка спойлеров (катов)
+  - pymdownx.snippets # Поддержка сниппетов
+  - pymdownx.superfences # Поддержка вложенных блоков кода
+  - footnotes # Поддержка встроенных сносок на страницах
+  - tables # Поддержка таблиц
+  - admonition # Поддержка информационных панелей
+  - attr_list # Использование html-атрибутов и CSS в элементах markdown
+  - md_in_html # Поддержка markdown внутри html
+  - smarty # конвертирует дефисы в тире
+  - pymdownx.emoji: # Иконки и эмодзи
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
+  - pymdownx.highlight: # Подсветка синтаксиса в блоках кода
+      anchor_linenums: true
